crates/hpc-core/tests/compile_fail/api_cross_context.stderr
error[E0425]: cannot find value `anchor1` in this scope
 --> tests/compile_fail/api_cross_context.rs:6:52
  |
6 |     let ctx1 = Context::create_context_with_brand(&anchor1).unwrap();
  |                                                    ^^^^^^^ not found in this scope

error[E0425]: cannot find value `anchor2` in this scope
 --> tests/compile_fail/api_cross_context.rs:7:52
  |
7 |     let ctx2 = Context::create_context_with_brand(&anchor2).unwrap();
  |                                                    ^^^^^^^ not found in this scope
